# fdeproj

./: .gitignore  Cargo.toml  README.md  VERICOMM_MAP.json  abc.history  justfile  swim.toml  waveform.fst
.surfer/translators/: spade_translator.wasm
fde/hw_lib/: dc_cell.xml
hw_lib/: dc_cell.xml  enc_libs.py  fdp1000k_arch.xml  fdp1000k_cil.xml  fdp1000k_con.xml  fdp1000k_dly.xml  fdp3_100_arch_gsb.xml  fdp3_100_cil_gsb.xml  fdp3_300_cb228_arch_gsb.xml  fdp3_cell_lib.xml  fdp3_con.xml  fdp3_dcplib.xml  fdp3p7_arch.xml  fdp3p7_cil.xml  fdp3p7_con.xml  fdp3p7_dly.xml  fdp4_500_cil.xml  fdp4_80_cil.xml  fdp4_cell_lib.xml  fdp4_con.xml  fdp4_config.xml  fdp4_dc_plib.xml  fdp4p_cell_lib.xml  fdp4p_dc_plib.xml  fdp4pro_cil.xml  fdp80k_config.xml
report/: hand_figure.rnote  ppts.typ  report.typ
report/report_images/: setup.HEIC
src/: main.spade  string_display.sv  tb_common.sv  tb_string_display.sv  tb_tpm_aes.sv  tb_tpm_aes.sv.bak  tpm_aes.sv  tpm_aes.sv.bak  ufde_bram_sim.v
src/blinky/: blinky.sv
src/bram_test/: bram_init.txt  bram_test.sv  tb_bram_test.sv
src/i2c_vl6180x/: i2c_m.sv  matrix_display.sv  tb_i2c_m.sv  tb_i2c_m.vvp  tb_vl6180x.sv  tb_vl6180x_post.sv  vl6180x.sv
src/namedisplay/: namedisplay.sv  tb_namedisplay.sv
src/ramp/: ramp.sv
src/string_display/: string_display.sv
src/tribuf/: tribuf.sv
sw_interface/: Cargo.toml
sw_interface/src/: main.rs
test/: spade-test.py
tools/: verify_siphash.py
yosys/: cells_map.v  fde_dc.lib  fdesimlib.v  techmap.v
yosys-fde/: brams.txt  brams_map.v  cells_map.v  fdesimlib.v  techmap.v
(+11 files in other folders)
