[package]
name = "sw_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bitvec = "1"
bytemuck = "1"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"
vlfd-rs = "2.1"